; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pbi_xld.c_PBI_XLD_D1ffPutByte.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pbi_xld.c_PBI_XLD_D1ffPutByte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xld_d_enabled = common dso_local global i64 0, align 8
@DISK_MASK = common dso_local global i64 0, align 8
@MEMORY_mem = common dso_local global i64 0, align 8
@diskrom = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [20 x i8] c"DISK rom activated\0A\00", align 1
@MODEM_MASK = common dso_local global i64 0, align 8
@voicerom = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [21 x i8] c"MODEM rom activated\0A\00", align 1
@VOICE_MASK = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [21 x i8] c"VOICE rom activated\0A\00", align 1
@PBI_NOT_HANDLED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PBI_XLD_D1ffPutByte(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i64, i64* @xld_d_enabled, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %17

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @DISK_MASK, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %6
  %11 = load i64, i64* @MEMORY_mem, align 8
  %12 = add nsw i64 %11, 55296
  %13 = load i64, i64* @diskrom, align 8
  %14 = call i32 @memcpy(i64 %12, i64 %13, i32 2048)
  %15 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %16 = call i32 @D(i32 %15)
  br label %44

17:                                               ; preds = %6, %1
  %18 = load i64, i64* %2, align 8
  %19 = load i64, i64* @MODEM_MASK, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %17
  %22 = load i64, i64* @MEMORY_mem, align 8
  %23 = add nsw i64 %22, 55296
  %24 = load i64, i64* @voicerom, align 8
  %25 = add nsw i64 %24, 2048
  %26 = call i32 @memcpy(i64 %23, i64 %25, i32 2048)
  %27 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %28 = call i32 @D(i32 %27)
  br label %43

29:                                               ; preds = %17
  %30 = load i64, i64* %2, align 8
  %31 = load i64, i64* @VOICE_MASK, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %40

33:                                               ; preds = %29
  %34 = load i64, i64* @MEMORY_mem, align 8
  %35 = add nsw i64 %34, 55296
  %36 = load i64, i64* @voicerom, align 8
  %37 = call i32 @memcpy(i64 %35, i64 %36, i32 2048)
  %38 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %39 = call i32 @D(i32 %38)
  br label %42

40:                                               ; preds = %29
  %41 = load i32, i32* @PBI_NOT_HANDLED, align 4
  store i32 %41, i32* %3, align 4
  br label %42

42:                                               ; preds = %40, %33
  br label %43

43:                                               ; preds = %42, %21
  br label %44

44:                                               ; preds = %43, %10
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @memcpy(i64, i64, i32) #1

declare dso_local i32 @D(i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
